# RiemannRe3-feishu-kit

./: .env.example  .gitignore  LICENSE  README.md  TECHNICAL.md  demo.py  demo_builder.py  demo_sheet_builder.py  feishu_bitable_builder.py  feishu_bitable_uploader.py  feishu_cli.py  feishu_drive_api.py  feishu_sheet_builder.py  feishu_sheet_uploader.py  import_md_to_doc.py  pyproject.toml  requirements.txt  upload_attachment.py  upload_pdf_to_doc.py
.specstory/history/: 2026-02-21_07-01Z-python-program-for-feishu-data-upload.md  2026-02-21_08-09Z-git-initialization-and-gitignore-setup.md  2026-02-21_08-10Z-creating-spreadsheets-in-specified-directories.md  2026-02-21_12-04Z-python-file-contents-summary.md  2026-02-21_12-28Z-file-path-issue-explanation.md  2026-02-21_13-04Z-python-api-for-table-document-creation.md  2026-02-21_16-02Z-pdf-upload-and-attachment-in-feishu.md
cli/: shell.py
examples/: demo_bitable.py  demo_client.py  demo_sheet.py
feishu_kit/: __init__.py  client.py  config.py  nodes.py  wiki_api.py
skills/feishu-publish/: SKILL.md  install.sh
skills/feishu-publish/scripts/: publish_to_feishu.py
tests/: test_bitable.py  test_client.py  test_config.py  test_sheet.py  test_wiki.py
